tests/baselines/reference/propertyAndAccessorWithSameName.errors.txt
==== tests/cases/conformance/classes/propertyMemberDeclarations/propertyAndAccessorWithSameName.ts (8 errors) ====
    class C {
        x: number;
        get x() { // error
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2300: Duplicate identifier 'x'.
            return 1;
        }
    }
    
    class D {
        x: number;
        set x(v) { } // error
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2300: Duplicate identifier 'x'.
    }
    
    class E {
        private x: number;
        get x() { // error
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2300: Duplicate identifier 'x'.
            return 1;
        }
        set x(v) { }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2300: Duplicate identifier 'x'.
    }